--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     },
     "stack": "container",
     "formation": {
-      "worker": {
+      "web": {
         "quantity": 1,
         "size": "free"
       }
